    namespace for a function with the name of the builtin
	after it checked %built_ins
  * Fixed the initialization so the short hostname is
    calculated from the longhost name instead of calling
	hostname -s
  * Moved almost all code from psh into Psh, Psh::Builtins
    and Psh::Util
  * Added portability infrastructure
  * Working Win32 port !!! (though it has limited features)
    Documentation for limitations follows

 Features:
  * Changed builtin alias so that 'alias name' displays the
    alias definition for that name
  * Perl Symbol completion now supports package names and
    package name completion
  * Filename Completion respects the FIGNORE environment
    variable now
  * New Perl Hashkey completion will TAB complete the name
    of keys for Perl hashes (if they are not written in quotes)
  * The 'cd' builtin respects CDPATH now and sets OLDPWD
  * Environment variable SHELL is set to the path to psh
  * New builtin 'unalias'
  * It's now possible to do "bg commandname" (e.g. "bg emacs")
    fg has the same behaviour for consistency
  * Added 'env' builtin. On systems with an env binary installed
    it will use the binary, on other systems (namely Win32) it
	will print a list of environment variables
  * Variables for bookmark completion are now
    @Psh::Completion::bookmarks and @Psh::Completion::netprograms
  * Support for user defined completions by
    %Psh::Completion::custom_completions

------------------------------------------------------------
0.004                                           [1999-12-13]
------------------------------------------------------------

This release fixes bugs, refactors the code, and adds the
following features:

  * Background process management much more like bash.

  * Perl code in addition to executables may be put in the
    background.

  * Pipelines.

  * Initial internationalization.

  * New built-ins: 'alias', 'export', 'setenv'.

  * A flexible set of evaluation strategies that can be